--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -42,7 +42,7 @@ a{
     color: rgba(0, 0, 0, 0.322);
 }
 .project-list{
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
