--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -15,7 +15,7 @@ a{
 }
 .intro-section{
     margin:0;
-    height:300px;
+    height:400px;
     color:#f0f0f0;
     background-color: rgb(56, 56, 56);
     display:flex;
@@ -25,10 +25,11 @@ a{
 }
 .skills-section{
     width:100%;
-    height:350px;
-    margin-top: 20px;
+    height:450px;
+    margin-top: 100px;
     display:flex;
     justify-content: space-around;
+    align-items: baseline;
 }
 .skills-section li{
     margin-bottom:15px;
@@ -38,22 +39,34 @@ a{
 }
 .navbar-list a:hover,
 .project-list a:hover{
-    text-shadow: 0 0 5px rgb(0, 255, 13);
+    text-shadow: 0 0 2px rgb(0, 218, 11);
     color: rgba(0, 0, 0, 0.322);
 }
 .project-list{
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.project-list h1{
+    margin:0;
+    padding:20px 0;
+    width:100%;
+    height:20vh;
+    text-align: center;
+    background-color: rgb(255, 244, 230);
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 .project-list ul{
-    margin:0;
+    margin:50px 0;
     padding: 10px 0 20px 0;
     height: auto;
     width: 80vw;
     display: grid;
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns: 3fr 3fr 3fr;
     gap: 30px 0;
 }
 .project-list-individual-container{
@@ -63,6 +76,7 @@ a{
     flex-wrap:nowrap;
     flex-flow: column;
     align-items: center;
+    text-align: center;
 }
 .project-list-individual-container img:hover{
     filter:drop-shadow(0 0 5px rgb(71, 71, 71)) opacity(0.6);
@@ -70,15 +84,14 @@ a{
 .project-list-individual-container p{
     font-weight:500;
 }
-.project-list h1{
-    margin:0;
-    padding:20px 0;
-    width:100%;
-    text-align: center;
-    background-color: rgb(255, 244, 230);
-}
 .email-preview{
     width: 250px;
+}
+#homepage-footer{
+    height:100px;
+    font-size:12px;
+    display:flex; 
+    justify-content: center;
 }
 @media only screen and (min-width:700px) and (max-width: 1100px){
     
