--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -102,6 +102,10 @@ a{
     .intro-section h2{
         font-size:25px;
     }
+    .project-list ul{
+        grid-template-columns: 2fr 2fr;
+        gap: 30px 0;
+    }
     .skills-section{
         height:1000px;
         flex-direction: column;
