--- a/src/components/projects/landing-pages/yugi-tutor-landing-page/yugiTutorLanding.css
+++ b/src/components/projects/landing-pages/yugi-tutor-landing-page/yugiTutorLanding.css
@@ -9,8 +9,8 @@
     height:300px;
     width:100%;
     background:url('/yugi-tutor-landing-page-images/yugi-top-image.jpg');
-    background-size:100%;
-    background-position: 0 -100px;
+    background-position: top;
+    background-size:cover;
     background-repeat: no-repeat;
     filter: grayscale(30%);
 }
@@ -23,9 +23,10 @@
     justify-content: center;
 }
 .yugi-tutor-top-banner>div :nth-child(n){
-    color:rgb(251, 255, 0);
-    filter: drop-shadow(0 0 2px black) grayscale(0%);
-    text-shadow: 0 0 5px rgb(0, 0, 0);
+    font-weight:800;
+    color:black;
+    filter: drop-shadow(0 0 2px rgb(251, 255, 0)) grayscale(0%);
+    text-shadow: 0 0 5px rgb(251, 255, 0);
     padding:0;
     margin:5px 0;
 }
