--- a/src/components/projects/landing-pages/kaiba-corp-landing-page/kaibaCorpLanding.css
+++ b/src/components/projects/landing-pages/kaiba-corp-landing-page/kaibaCorpLanding.css
@@ -8,22 +8,10 @@
     padding:0;
     font-family: 'Play', sans-serif;
 }
-.exodia-image{
-    height:100vh;
-    width:100%;
-    position:relative;
-    background-image: url("/kaiba-corp-landing-images/exodia-background.png" );
-    background-position: center;
-    background-size: 110% 110%;
-    background-repeat: no-repeat;
-    filter: saturate(0.6);
-    
-}
 .kaiba-nav-container1,
 .kaiba-nav-links,
 .kaiba-social-links{
     display:flex;
-    z-index:10 !important;
 }
 .kaiba-nav-container1 a{
     color:#fad231;
@@ -46,6 +34,18 @@
     padding-right:20px;
     justify-content: space-between;
 }
+.exodia-image{
+    height:100vh;
+    width:100%;
+    position:absolute;
+    margin:0;
+    padding:0;
+    background-image: url("/kaiba-corp-landing-images/exodia-background.png" );
+    background-size: 120%; 
+    background-position: bottom;
+    background-repeat: no-repeat;
+    z-index:-10;
+}
 .kaiba-welcome-message-container{
     width:100%;
     height:100vh;
@@ -54,23 +54,35 @@
     align-items: center;
 }
 .kaiba-welcome-message{
-    padding:203px 0;
-    width:50vw;
+    width:80%;
     text-align: center;
-    backdrop-filter: blur(20px);
-    color:rgb(7, 7, 255);
-    border-radius: 70%;
-    box-shadow: 0 0 20px gold;
+    color:white;
+    box-shadow: inset 0 0 5px white;
+    background-color:rgba(89, 0, 255, 0.35);
 }
-.kaiba-next-section{
+.kaiba-welcome-message h1{
+    font-size:100px;
+    margin:0;
+}
+.kaiba-welcome-message h2{
+    font-weight:500;
+    margin-bottom:20px;
+    font-size:75px;
+    text-transform: uppercase;
+}
+.kaiba-welcome-message h3{
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size:50px;
+}
+.kaiba-intro-section{
     padding:0;
     margin:0;
     height: 100vh;
     width: 100%;
     display:flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    
     
     position:relative;
     background-image: url("/kaiba-corp-landing-images/blue-eyes-background.jpg" );
@@ -80,10 +92,9 @@
     filter: saturate(0.6);
 }
 .kaiba-self-portrait{
-    
     padding:0;
     margin:0;
-    width:auto;
+    width:500px;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -93,9 +104,14 @@
     display:flex;
     flex-direction: column;
     justify-content: space-around;
-    height:40vh;
+    width:500px;
+    height:500px;
     box-shadow: 0 0 20px black;
-    backdrop-filter: blur(20px);
+    background-color:rgba(10,21,51, 0.5);
+    box-shadow:inset 0 0 5px white;
+}
+.kaiba-fullname{
+    text-transform: uppercase;
 }
 .kaiba-email-form-button:hover{
     background-color: #fad231;
