--- a/src/components/projects/landing-pages/yugi-tutor-landing-page/yugiTutorLanding.css
+++ b/src/components/projects/landing-pages/yugi-tutor-landing-page/yugiTutorLanding.css
@@ -6,7 +6,7 @@
 }
 .yugi-tutor-top-banner{
     margin-top:0;
-    height:300px;
+    height:500px;
     width:100%;
     background:url('/yugi-tutor-landing-page-images/yugi-top-image.jpg');
     background-position: top-right;
@@ -30,10 +30,17 @@
     padding:0;
     margin:5px 0;
 }
+.yugi-tutor-top-banner>div+p{
+    color:red !important;
+    font-size: 52px;
+}
+.yugi-tutor-top-banner h1{
+    font-size:50px;
+}
 .yugi-tutor-top-banner :nth-child(3){
     width:60%;
     text-align: center;
-    font-size:16px;
+    font-size:20px;
 }
 .yugi-tutor-info-row{
     background-color:rgb(136, 136, 250);
