--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -116,6 +116,7 @@ a{
         gap: 30px 0;
     }
     .skills-section{
+        margin:0;
         height:1000px;
         flex-direction: column;
         align-items: center;
@@ -140,6 +141,7 @@ a{
         width:75%;
     }
    .skills-section{
+    margin:0;
     height:1000px;
     flex-direction: column;
     align-items: center;
