--- a/src/components/projects/emails/newsletter/sjsu-newsletter-1/sjsu-newsletter-1.css
+++ b/src/components/projects/emails/newsletter/sjsu-newsletter-1/sjsu-newsletter-1.css
@@ -44,5 +44,8 @@
 
 }
 /*mobile*/
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 599px){
+    .sjsu-newsletter-table-container{
+        width:100%;
+    }
     }
