--- a/src/components/projects/emails/newsletter/sjsu-newsletter-1/sjsu-newsletter-1.css
+++ b/src/components/projects/emails/newsletter/sjsu-newsletter-1/sjsu-newsletter-1.css
@@ -56,7 +56,7 @@
         margin-top: 80px;
     }
     .sjsu-upcoming-event-table{
-        height:700px;
+        height:550px;
     }
     .sjsu-google-interview-article-image-table{
         width:100%;
@@ -92,6 +92,12 @@
     .sjsu-power-mom-book-table{
         width:100%;
         margin:50px 0;
+    }
+    .sjsu-working-mothers-text{
+        margin:30px 0 !important;
+    }
+    .sjsu-power-moms-button-table{
+        margin:0px !important;
     }
     .sjsu-alumni-membership-button-table a{
         font-size:10px;
