adjusted main page

--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -107,6 +107,7 @@ a{
     .intro-section h1{
         font-size:45px;
         width:80%;
+        text-align: center;
     }
     .intro-section h2{
         font-size:25px;
