--- a/src/components/projects/emails/newsletter/newsletterEmail1.css
+++ b/src/components/projects/emails/newsletter/newsletterEmail1.css
@@ -22,7 +22,8 @@
         width: 100%;
     }
     .nav-links-top{
-        font-size:12px !important; 
+        margin:2px;
+        font-size:11px !important; 
     }
     .fashion-nova-logo{
         width: 100%;
