--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -26,18 +26,31 @@ a{
 }
 .skills-section{
     width:100%;
-    height:450px;
-    margin-top: 100px;
+    margin:100px 0;
     display:flex;
     justify-content: space-around;
-    align-items: baseline;
 }
-.skills-section li{
-    margin-bottom:15px;
+.one-column-skills-section{
+    padding: 0 30px;
+    height:430px;
+    border-radius: 20px;
+    border: 2px solid rgba(0, 0, 0, 0.144);
 }
 .one-column-skills-section ul{
     width:100%;
-    list-style:circle !important;
+}
+.one-column-skills-section li{
+    margin:0;
+    margin-bottom:15px;
+}
+.photoshop-icon{
+    width:35px; 
+    margin-left:-10px;
+}
+.testing{
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 .navbar-list a:hover,
 .project-list a:hover{
@@ -64,7 +77,8 @@ a{
     width:100%;
     height:20vh;
     text-align: center;
-    background-color: rgb(255, 244, 230);
+    background-color: rgb(56, 56, 56);
+    color:#F0F0F0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -88,20 +102,60 @@ a{
     text-align: center;
 }
 .project-list-individual-container img:hover{
-    filter:drop-shadow(0 0 5px rgb(71, 71, 71)) opacity(0.6);
+
+    filter:drop-shadow(0 0 5px rgb(0, 255, 0)) opacity(0.6) grayscale(50%);
 }
 .project-list-individual-container p{
     font-weight:500;
 }
 .email-preview{
-    width: 250px;
+    width: 350px;
 }
+.project-desc-text{
+    position:absolute;
+    margin: 200px 0 0;
+    color:black;
+    text-shadow:0 0 10px black;
+    display:none;
+}/* 
+.hovering .project-desc-text{
+    display:block;
+} */
 #homepage-footer{
-    height:100px;
+    height:250px;
     font-size:12px;
+    background-color: rgb(56, 56, 56);
+    color:white;
     display:flex; 
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
 }
+.linkedin-logo{
+    color:white;
+}
+.linkedin-logo i {
+    margin-right:5px;
+}
+.vite-logo-footer{
+    width:14px;
+    margin:0;
+    padding:0;
+}
+
+@media only screen and (max-width: 1260px){
+    .email-preview{
+        width: 250px;
+    }
+    .one-column-skills-section{
+        padding: 0 10px;
+    }
+    .one-column-skills-section h2{
+        font-size: 28px !important;
+        text-align: center;
+        padding: 0 20px;
+    }
+}
+
 @media only screen and (min-width:700px) and (max-width: 1100px){
     
     .intro-section h1{
@@ -113,13 +167,14 @@ a{
         font-size:25px;
     }
     .skills-section{
-        margin:0;
+        margin:30px 0;
         height:1000px;
         flex-direction: column;
         align-items: center;
     }
     .one-column-skills-section{
         width:400px;
+        margin:20px 0;
     }
     .skills-section h2{
         font-size:35px !important;
@@ -175,5 +230,8 @@ a{
    }
    .project-list ul{
         grid-template-columns: 1fr;
+   }
+   #homepage-footer{
+    flex-direction: column;
    }
 }
