--- a/src/components/projects/landing-pages/apartment-landing-page/apartmentLandingPage.css
+++ b/src/components/projects/landing-pages/apartment-landing-page/apartmentLandingPage.css
@@ -156,6 +156,16 @@
     background-repeat: no-repeat;
     filter:saturate(0.1);
 }
+.highlights-background-square{
+    position: absolute;
+    background-color: rgba(9,9,10,0.5);
+    width:100%;
+    height: 100%;
+    z-index: -1;
+    left: 0px;
+    top: 0px;
+    transform: rotate(-1deg);
+}
 .highlights-container{
     position:relative;
     bottom:90%;
@@ -227,6 +237,16 @@
     align-items: center;
     background-color: rgb(225,183,136);
 }
+.experience-background-square{
+    position: absolute;
+    background-color: rgba(9,9,10,0.5);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    left: 0px;
+    top: 0px;
+    transform: rotate(1deg);
+}
 .apartment-landing-page-experience > div{
     height: 75%;
     width:40%;
@@ -236,7 +256,7 @@
     align-items: center;
     background-color: rgba(9,9,10,0.7);
     color:white;
-    transform:rotate(0.4deg);
+    transform:rotate(-1deg);
 }
 .apartment-landing-page-experience h6{
     font-size:20px;
@@ -368,6 +388,25 @@
     background-color: black;
     color:white !important;
     border-color:black;
+}
+.apartment-back-to-top{
+    position: fixed;
+    font-size: 30px;
+    right: 30px;
+    bottom: 100px;
+    cursor: pointer;
+}
+.apartment-back-to-top i{
+    color: black;
+    border-radius: 50%;
+    border: 2px solid black;
+    background-color: rgb(225,183,136);
+    padding: 15px;
+}
+.apartment-back-to-top i:hover{
+    text-shadow: 0 0 2px white;
+    box-shadow: 0 0 2px white;
+    background-color: rgb(199, 162, 119);
 }
 @media only screen and (min-width: 960px) and (max-width: 1440px){
     .apartment-landing-page-nav nav{   
